--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
     <div class="header-container">
         <h1>PyleaMUN Kudos Board</h1>
         <p>See what delegates are saying and give some kudos!</p>
-        <a href="kudos-shoutout.html" class="kudos-board-link mt-4">
+        <a href="/kudos/" class="kudos-board-link mt-4">
             &larr; Give a Shout-Out!
         </a>
     </div>
@@ -436,8 +436,8 @@
         // --- ADMIN CONFIGURATION ---
         // IMPORTANT: Replace with your actual Admin User ID and a secret password.
         // Get your Admin User ID by opening the console on your admin browser and copying the "User signed in:" UID.
-        const ADMIN_UID = "PtVZq56rN4Yz7NZKOoPfJD6l6a63"; // <--- REPLACE THIS with the UID you copied from your console
-        const ADMIN_PASSWORD = "@@Pylea@@26"; // <--- REPLACE THIS with your desired admin password
+        const ADMIN_UID = "PtVZq56rN4Yz7NZKOoPfJD6l6a63"; // <--- THIS IS YOUR ADMIN UID
+        const ADMIN_PASSWORD = "adminpassword123"; // <--- REPLACE THIS with your desired admin password
 
         // --- UI Utility Functions ---
         function showLoading(message = "Processing...") {
